--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -40,28 +40,20 @@
         <td colspan="5" align="right">
             <a class="clearcart btn btn-danger" href="/cart/clear">Clear cart</a>
         </td>
+        <% if(isLoggedIn) { %>
         <td colspan="5" align="right">
             <a class="btn btn-primary buynow" href="#">Buy now</a>
         </td>
+        <% }else {%>
+        <td colspan="5" align="right">
+            <a class="btn btn-primary" href="/users/login">You must login to place order</a>
+        </td>
+        <% } %>
     </tr>
     
 </table>
 
-<form class="pp" action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post">
-<input type="hidden" name="cmd" value="_cart">
-<input type="hidden" name="upload" value="1">
-<input type="hidden" name="business" value="jultranet-facilitator@gmail.com">
-<% var num = 0; %>
-<% cart.forEach(function(p){ %>
-    <% num++ %>
-    <input type="hidden" name="item_name_<%= num %>" value="<%= p.title %>">
-    <input type="hidden" name="amount_<%= num %>" value="<%= p.price %>">
-    <input type="hidden" name="quantity_<%= num %>" value="<%= p.qty %>">
-<% }); %>
-<input type="hidden" name="currency_code" value="USD">
-<input type="hidden" name="amount" value="<%= total %>">
-<input type="image" src="http://www.paypal.com/en_US/i/btn/x-click-but01.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!">
-</form>
+
 
 <% } else {%>
 <h3 class="text-center">Your cart is empty.</h3>
@@ -74,17 +66,7 @@ $(function() {
     $('a.clearcart').on('click', function () {
         if (!confirm('Confirm clear cart'))
             return false;
-    });
-    
-    $('a.buynow').on('click', function (e) {
-        e.preventDefault();
-        
-        $.get('/cart/buynow', function() {
-            $('form.pp input[type=image]').click();
-            $('.ajaxbg').show();
-        });
-    });
-        
+    });      
 });
     
 </script>
