--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -43,7 +43,7 @@
     </tr>
     <% } %>
      <% } else {%>
-     <% if(cart[0].title == "becoming-by-michelle-obama"){ %>
+     <% if(cart[0].title == "becoming-by-michelle-obama" || cart[0].title == "fantastic-beasts:-the-crimes-of-grindelwald" || cart[0].title == "nine-perfect-strangers" || cart[0].title == "churchill:-walking-with-destiny-" || cart[0].title == "the-hive-queen-(wings-of-fire,-book-12)-"){ %>
      <tr>
         <td colspan="6" align="right"><b>Delivery: </b> $100</td>
     </tr>
