--- a/views/all_notifications.ejs
+++ b/views/all_notifications.ejs
@@ -10,7 +10,7 @@
     <% notifications.forEach(function(p){ %>
     <br><br>
     <div class="col-4">
-        <h4><%= p %></h4>
+        <h4><a href="/orders/myorders"><%= p %></a></h4>
     </div>
     <% }); %>
 
