--- a/views/placeorder.ejs
+++ b/views/placeorder.ejs
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group">
             <label for="">Expiration Year</label>
-            <input type="text" class="form-control" name="expmyear" placeholder="YY">
+            <input type="text" class="form-control" name="expyear" placeholder="YYYY">
         </div>
     </div>
 
